2010-07-08  Robert Larice
 * src/tclspice.c ,
 * src/frontend/outitf.c ,
 * src/frontend/spiceif.c ,
 * src/spicelib/parser/ifnewuid.c :
        INPtables, remove some casts, which are no longer necessary

2010-07-08  Robert Larice
 * src/tclspice.c ,
 * src/frontend/outitf.h ,
 * src/frontend/spiceif.c ,
 * src/include/cktdefs.h ,
 * src/include/ifsim.h ,
 * src/include/inpdefs.h ,
 * src/spicelib/analysis/ckt.h ,
 * src/spicelib/analysis/cktfndm.c ,
 * src/spicelib/analysis/cktmask.c ,
 * src/spicelib/analysis/cktmcrt.c ,
 * src/spicelib/analysis/cktmpar.c ,
 * src/spicelib/analysis/cktpmnam.c ,
 * src/spicelib/analysis/noisean.c ,
 * src/spicelib/analysis/tfanal.c ,
 * src/spicelib/devices/cktask.c ,
 * src/spicelib/devices/cktcrte.c ,
 * src/spicelib/devices/cktfinddev.c ,
 * src/spicelib/devices/ind/mutsetup.c ,
 * src/spicelib/devices/urc/urcsetup.c ,
 * src/spicelib/parser/inp.h ,
 * src/spicelib/parser/inp2b.c ,
 * src/spicelib/parser/inp2c.c ,
 * src/spicelib/parser/inp2d.c ,
 * src/spicelib/parser/inp2e.c ,
 * src/spicelib/parser/inp2f.c ,
 * src/spicelib/parser/inp2g.c ,
 * src/spicelib/parser/inp2h.c ,
 * src/spicelib/parser/inp2i.c ,
 * src/spicelib/parser/inp2j.c ,
 * src/spicelib/parser/inp2k.c ,
 * src/spicelib/parser/inp2l.c ,
 * src/spicelib/parser/inp2m.c ,
 * src/spicelib/parser/inp2n.c ,
 * src/spicelib/parser/inp2o.c ,
 * src/spicelib/parser/inp2p.c ,
 * src/spicelib/parser/inp2q.c ,
 * src/spicelib/parser/inp2r.c ,
 * src/spicelib/parser/inp2s.c ,
 * src/spicelib/parser/inp2t.c ,
 * src/spicelib/parser/inp2u.c ,
 * src/spicelib/parser/inp2v.c ,
 * src/spicelib/parser/inp2w.c ,
 * src/spicelib/parser/inp2y.c ,
 * src/spicelib/parser/inp2z.c ,
 * src/spicelib/parser/inpaname.c ,
 * src/spicelib/parser/inppname.c :
        use the GENmodel and GENinstance type instead of void*

2010-07-07  Robert Larice
 * src/include/dllitf.h ,
 * src/include/mifproto.h ,
 * src/xspice/icm/dlmain.c ,
 * src/xspice/mif/mif_inp2.c ,